--- a/Light-Array-9.ioc
+++ b/Light-Array-9.ioc
@@ -1,30 +1,84 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.IPParameters=NbrOfConversionFlag,master,SelectedChannel
+ADC1.NbrOfConversionFlag=0
+ADC1.SelectedChannel=ADC_CHANNEL_12
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=TIM1_CH1
+Dma.RequestsNb=1
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.EventEnable=DISABLE
+Dma.TIM1_CH1.0.Instance=DMA1_Channel1
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestNumber=1
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM1_CH1.0.SignalID=NONE
+Dma.TIM1_CH1.0.SyncEnable=DISABLE
+Dma.TIM1_CH1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM1_CH1.0.SyncRequestNumber=1
+Dma.TIM1_CH1.0.SyncSignalID=NONE
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32C011J4M6
 Mcu.Family=STM32C0
-Mcu.IP0=CORTEX_M0+
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IPNb=3
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M0+
+Mcu.IP2=DEBUG
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IPNb=8
 Mcu.Name=STM32C011J(4-6)Mx
 Mcu.Package=SO8N
-Mcu.PinsNb=0
+Mcu.Pin0=PC14-OSCX_IN (PC14)
+Mcu.Pin1=PB7
+Mcu.Pin2=PA8
+Mcu.Pin3=PA11 [PA9]
+Mcu.Pin4=PA12 [PA10]
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14-BOOT0
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32C011J4Mx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA11\ [PA9].Locked=true
+PA12\ [PA10].Locked=true
+PA12\ [PA10].Mode=IN12
+PA12\ [PA10].Signal=ADC1_IN12
+PA13.Mode=Serial_Wire
+PA13.Signal=DEBUG_SWDIO
+PA14-BOOT0.Mode=Serial_Wire
+PA14-BOOT0.Signal=DEBUG_SWCLK
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
 PA8__PA11\ [PA9].StandardMode=true
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=BTN
+PB7.Locked=true
+PB7.Signal=GPIO_Input
+PC14-OSCX_IN\ (PC14).Locked=true
 PC14-OSCX_IN\ (PC14)__PB7.StandardMode=true
 PC15-OSCX_OUT\ (PC15)__PA14-BOOT0__PB6.StandardMode=true
 PF2-NRST__PA0__PA1__PA2.StandardMode=true
@@ -60,28 +114,37 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
-RCC.ADCFreq_Value=12000000
-RCC.AHBFreq_Value=12000000
-RCC.APBFreq_Value=12000000
-RCC.APBTimFreq_Value=12000000
-RCC.CortexFreq_Value=12000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
+RCC.ADCFreq_Value=48000000
+RCC.AHBFreq_Value=48000000
+RCC.APBFreq_Value=48000000
+RCC.APBTimFreq_Value=48000000
+RCC.CortexFreq_Value=48000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=12000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=12000000
+RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=8000000
+RCC.HSISYSCLKDivider=RCC_HSI_DIV1
 RCC.HSI_VALUE=48000000
-RCC.I2C1Freq_Value=12000000
-RCC.I2S1Freq_Value=12000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,USART1Freq_Value
+RCC.I2C1Freq_Value=48000000
+RCC.I2S1Freq_Value=48000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSISYSCLKDivider,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,USART1Freq_Value
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=12000000
-RCC.MCO2PinFreq_Value=12000000
-RCC.PWRFreq_Value=12000000
-RCC.SYSCLKFreq_VALUE=12000000
-RCC.USART1Freq_Value=12000000
+RCC.MCO1PinFreq_Value=48000000
+RCC.MCO2PinFreq_Value=48000000
+RCC.PWRFreq_Value=48000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.USART1Freq_Value=48000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
 isbadioc=false
