--- a/Light-Array-9.ioc
+++ b/Light-Array-9.ioc
@@ -142,7 +142,8 @@ SH.GPXTI7.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Period
+TIM1.Period=60-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
