--- a/Light-Array-9.ioc
+++ b/Light-Array-9.ioc
@@ -57,7 +57,7 @@ Mcu.UserName=STM32C011J4Mx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
